--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ analytics-google: 'UA-142673814-1'
 
 # if you don't want comments in your posts, leave categories empty
 disqus:
-  shortname: mydisqus # enter this from your disqus account
+  shortname: alexnaka # enter this from your disqus account
   categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
@@ -54,7 +54,7 @@ github: anaka
 # email: myemail@gmail.com
 
 authors:
-    johndoe:
+    alexnaka:
         name: Alex Naka
         bio: 
         external-image: false
@@ -72,6 +72,7 @@ width: large
 
 # if you don't need projects, comment the *projects* configs below
 projects: false
+publications: true
 
 # if you don't need "about" or "blog", comment them out below
 about: true
@@ -112,3 +113,6 @@ compress_html:
         - stage
 
 exclude: ["travis.sh", "Rakefile", "README.md", "Gemfile", "Gemfile.lock", "FAQ.md"]
+
+collections:
+  - pubs
