--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,9 @@ resume: false
 resume-external: false
 resume-url: https://google.com/?q=my+resume
 
+title: ANaka/ANaka.github.io
+repository: ANaka/ANaka.github.io
+
 url: https://anaka.github.io
 # your url: http://USERNAME.github.io
 
