--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: Alex Naka
 bio: (Neuro)science, data, code, that sort of thing. 
 
 # twitter summary info
-description: A blog about technology and stuff related
+description:
 
 # if it's an external image, update below for true
 # better with square images
