twitter bots post

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: Alex Naka
 bio: (Neuro)science, data, code, that sort of thing. 
 
 # twitter summary info
-description:
+description: (Neuro)science, data, code, that sort of thing.
 
 # if it's an external image, update below for true
 # better with square images
